--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 - name: Blog
   link: /blog/
-- name: About
-  link: /about/
+- name: Hobbies
+  link: /hobbies/
 - name: Contact
   link: /contact/
