--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,6 +1,6 @@
 left_links:
-  - name: Blog
-    link: /blog/
+  - name: Projects
+    link: /projects/
   - name: Hobbies
     link: /hobbies/
   - name: Contact
