--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: Melvyn NQ Tan's Website
 url: "https://melvyn9.github.io/"
-baseurl: "/melvyn9.github.io"
+baseurl:
 google_analytics_key:
 google_maps_javascript_api_key:
 disqus_shortname:
