--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ collections:
     _icon: account_circle
 
 paginate: 10
-paginate_path: "/projects/:num/"
+paginate_path: "/blog/:num/"
 
 jekyll-archives:
   enabled: ['categories']
